preprocessing and word2vec embedding for words in our vocabulary

--- a/quora.ipynb
+++ b/quora.ipynb
@@ -12,7 +12,8 @@
     "kernelspec": {
       "name": "python3",
       "display_name": "Python 3"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -30,7 +31,7 @@
       "metadata": {
         "id": "UyRS_yRvXoFc",
         "colab_type": "code",
-        "outputId": "d4cdeece-02d4-4c21-93f8-ffc34314b6fc",
+        "outputId": "ffd4fd57-52d9-461d-e460-c77d6327101b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 173
@@ -47,24 +48,14 @@
         "\n",
         "from nltk.corpus import stopwords\n",
         "from sklearn.model_selection import train_test_split\n",
-        "import matplotlib.pyplot as plt\n",
-        "import seaborn as sns\n",
-        "\n",
         "import itertools\n",
         "import datetime\n",
         "\n",
-        "from keras.preprocessing.sequence import pad_sequences\n",
-        "from keras.models import Model\n",
-        "from keras.layers import Input, Embedding, LSTM, Lambda\n",
-        "import keras.backend as K\n",
-        "from keras.optimizers import Adadelta\n",
-        "from keras.callbacks import ModelCheckpoint\n",
         "\n",
         "from google.colab import drive\n",
-        "drive.mount('/content/drive', force_remount=True)\n",
-        "\n"
+        "drive.mount('/content/drive', force_remount=True)"
       ],
-      "execution_count": 1,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -99,7 +90,7 @@
       "metadata": {
         "id": "2atiMrKfcf0K",
         "colab_type": "code",
-        "outputId": "58b5382c-da6e-42d5-b346-a932cf530b4e",
+        "outputId": "8d2c8d99-fe0b-4478-9f5a-3f3aeb2f20f7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 136
@@ -109,13 +100,13 @@
         "!ls '/content/drive/My Drive'\n",
         "\n"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             " 53678.jpg\t\t\t\t'How to get started with Drive.pdf'\n",
-            "'6th sem.zip (Unzipped Files)'\t\t IMG_4388.MOV\n",
+            "'6th sem.zip (Unzipped Files)'\t\t java_all_video.rar\n",
             "'Colab Notebooks'\t\t\t mid-term-report-computer.gdoc\n",
             " final.rar\t\t\t\t q_quora.csv\n",
             " final.zip\t\t\t\t stock_price.csv\n",
@@ -139,7 +130,7 @@
         "stops = set(stopwords.words('english'))\n",
         "\n",
         "def text_to_word_list(text):\n",
-        "    ''' Pre process and convert texts to a list of words '''\n",
+        "#     gets a whole question inside text variable on which  preprocessing is done and then the question is splitted into word indices and returned\n",
         "    text = str(text)\n",
         "    text = text.lower()\n",
         "\n",
@@ -186,11 +177,11 @@
       "metadata": {
         "id": "VNHpLjOTgtGy",
         "colab_type": "code",
+        "outputId": "84d51720-2096-4191-8156-2669de14c51b",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 54
-        },
-        "outputId": "82e4ee30-732a-4541-db80-244cc0144c6b"
+          "height": 88
+        }
       },
       "source": [
         "\n",
@@ -202,37 +193,41 @@
         "\n",
         "questions_cols = ['question1', 'question2']\n",
         "\n",
-        "# Iterate over the questions only of both training and test datasets\n",
+        "# Iterate over the questions(i.e. 'question 1', 'question2') of the training sets provided \n",
+        "# get the data from dataset(df) in  variable dataset\n",
         "for dataset in [df]:\n",
+        "#   now iterate through the rows of the dataset using  index as iterator (i.e. goes through the row having particular index at a time) \n",
         "    for index, row in dataset.iterrows():\n",
         "\n",
-        "        # Iterate through the text of both questions of the row\n",
+        "        # Iterate through the text of both questions within the current  row\n",
         "        for question in questions_cols:\n",
-        "\n",
-        "            q2n = []  # q2n -> question numbers representation\n",
+        "            que2no = []  # que2no ->  numbers representation of the cureently being processed question\n",
         "            for word in text_to_word_list(row[question]):\n",
         "\n",
-        "                # Check for unwanted words\n",
+        "                # Check for unwanted words i.e mainly stopwords\n",
         "                if word in stops and word not in word2vec.vocab:\n",
         "                    continue\n",
         "\n",
         "                if word not in vocabulary:\n",
         "                    vocabulary[word] = len(inverse_vocabulary)\n",
-        "                    q2n.append(len(inverse_vocabulary))\n",
+        "                    que2no.append(len(inverse_vocabulary))\n",
         "                    inverse_vocabulary.append(word)\n",
         "                else:\n",
-        "                    q2n.append(vocabulary[word])\n",
+        "                    que2no.append(vocabulary[word])\n",
         "\n",
         "            # Replace questions as word to question as number representation\n",
-        "            dataset.set_value(index, question, q2n)\n",
+        "            dataset.set_value(index, question, que2no)\n",
+        "            \n",
         "            "
       ],
-      "execution_count": 7,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:29: FutureWarning: set_value is deprecated and will be removed in a future release. Please use .at[] or .iat[] accessors instead\n"
+            "/usr/local/lib/python3.6/dist-packages/smart_open/smart_open_lib.py:398: UserWarning: This function is deprecated, use smart_open.open instead. See the migration notes for details: https://github.com/RaRe-Technologies/smart_open/blob/master/README.rst#migrating-to-the-new-open-function\n",
+            "  'See the migration notes for details: %s' % _MIGRATION_NOTES_URL\n",
+            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:31: FutureWarning: set_value is deprecated and will be removed in a future release. Please use .at[] or .iat[] accessors instead\n"
           ],
           "name": "stderr"
         }
@@ -243,264 +238,34 @@
       "metadata": {
         "id": "MpTA43DAPT6c",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 669
-        },
-        "outputId": "d261040a-053a-429e-c157-6ac5443ce873"
+        "colab": {}
       },
       "source": [
-        "df.head(20)\n"
+        "embedding_dim = 300\n",
+        "# creating an embedding matrix whose length is one more than vocabulary and dimension is 300\n",
+        "embedding_matrix = 1 * np.random.randn(len(vocabulary) + 1, embedding_dim)  \n",
+        "embedding_matrix[0] = 0  # So that the zeroth place remain empty \n",
+        "\n",
+        "# (Build the embedding matrix) Assigning the word2vec embedding for each words of our vocabulary  \n",
+        "for word, index in vocabulary.items():\n",
+        "    if word in word2vec.vocab:\n",
+        "        embedding_matrix[index] = word2vec.word_vec(word)"
       ],
-      "execution_count": 9,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>id</th>\n",
-              "      <th>qid1</th>\n",
-              "      <th>qid2</th>\n",
-              "      <th>question1</th>\n",
-              "      <th>question2</th>\n",
-              "      <th>is_duplicate</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>0</td>\n",
-              "      <td>1</td>\n",
-              "      <td>2</td>\n",
-              "      <td>[1, 2, 3, 4, 5, 4, 6, 7, 8, 9, 10, 8, 11]</td>\n",
-              "      <td>[1, 2, 3, 4, 5, 4, 6, 7, 8, 9, 10]</td>\n",
-              "      <td>0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>1</td>\n",
-              "      <td>3</td>\n",
-              "      <td>4</td>\n",
-              "      <td>[1, 2, 3, 12, 13, 14, 15, 16, 15, 17, 18]</td>\n",
-              "      <td>[1, 19, 20, 21, 3, 22, 23, 24, 3, 13, 14, 15, ...</td>\n",
-              "      <td>0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>2</td>\n",
-              "      <td>5</td>\n",
-              "      <td>6</td>\n",
-              "      <td>[26, 27, 16, 28, 3, 29, 30, 31, 32, 33, 34, 35]</td>\n",
-              "      <td>[26, 27, 31, 29, 36, 37, 5, 38, 39, 40]</td>\n",
-              "      <td>0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>3</td>\n",
-              "      <td>7</td>\n",
-              "      <td>8</td>\n",
-              "      <td>[41, 42, 16, 43, 44, 45, 26, 27, 16, 46, 47]</td>\n",
-              "      <td>[48, 3, 49, 50, 51, 52, 53, 54, 51, 2, 55, 5, ...</td>\n",
-              "      <td>0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>4</th>\n",
-              "      <td>4</td>\n",
-              "      <td>9</td>\n",
-              "      <td>10</td>\n",
-              "      <td>[56, 57, 58, 8, 59, 60, 61, 62, 63, 64, 65, 66]</td>\n",
-              "      <td>[56, 67, 19, 68, 8, 62, 59]</td>\n",
-              "      <td>0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>5</th>\n",
-              "      <td>5</td>\n",
-              "      <td>11</td>\n",
-              "      <td>12</td>\n",
-              "      <td>[69, 70, 16, 42, 71, 72, 73, 74, 73, 75, 1, 76...</td>\n",
-              "      <td>[16, 42, 81, 71, 72, 74, 82, 8, 71, 1, 76, 83,...</td>\n",
-              "      <td>1</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>6</th>\n",
-              "      <td>6</td>\n",
-              "      <td>13</td>\n",
-              "      <td>14</td>\n",
-              "      <td>[84, 16, 85, 86]</td>\n",
-              "      <td>[1, 87, 88, 89, 90, 91, 92, 93, 94]</td>\n",
-              "      <td>0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>7</th>\n",
-              "      <td>7</td>\n",
-              "      <td>15</td>\n",
-              "      <td>16</td>\n",
-              "      <td>[26, 27, 16, 36, 95, 96]</td>\n",
-              "      <td>[1, 84, 16, 97, 36, 98, 96]</td>\n",
-              "      <td>1</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>8</th>\n",
-              "      <td>8</td>\n",
-              "      <td>17</td>\n",
-              "      <td>18</td>\n",
-              "      <td>[50, 97, 99, 100, 101]</td>\n",
-              "      <td>[50, 97, 99, 100, 101]</td>\n",
-              "      <td>0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>9</th>\n",
-              "      <td>9</td>\n",
-              "      <td>19</td>\n",
-              "      <td>20</td>\n",
-              "      <td>[102, 103, 70, 27, 16, 104, 30, 105, 106, 107]</td>\n",
-              "      <td>[26, 97, 16, 104, 102, 107, 108, 109, 31]</td>\n",
-              "      <td>0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>10</th>\n",
-              "      <td>10</td>\n",
-              "      <td>21</td>\n",
-              "      <td>22</td>\n",
-              "      <td>[110, 48, 111, 112, 34, 113, 114]</td>\n",
-              "      <td>[1, 115, 116, 3, 117, 118, 27, 119, 79, 3, 120...</td>\n",
-              "      <td>0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>11</th>\n",
-              "      <td>11</td>\n",
-              "      <td>23</td>\n",
-              "      <td>24</td>\n",
-              "      <td>[26, 97, 16, 125, 48, 30, 126, 127]</td>\n",
-              "      <td>[26, 27, 16, 128, 129, 30, 126, 127]</td>\n",
-              "      <td>1</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>12</th>\n",
-              "      <td>12</td>\n",
-              "      <td>25</td>\n",
-              "      <td>26</td>\n",
-              "      <td>[1, 27, 130, 131, 132, 133]</td>\n",
-              "      <td>[26, 27, 99, 130, 131, 132, 133]</td>\n",
-              "      <td>1</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>13</th>\n",
-              "      <td>13</td>\n",
-              "      <td>27</td>\n",
-              "      <td>28</td>\n",
-              "      <td>[1, 134, 135, 136, 137, 138, 139]</td>\n",
-              "      <td>[1, 134, 135, 136, 137, 138]</td>\n",
-              "      <td>1</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>14</th>\n",
-              "      <td>14</td>\n",
-              "      <td>29</td>\n",
-              "      <td>30</td>\n",
-              "      <td>[1, 115, 3, 140, 141, 135, 142, 91, 143, 144, ...</td>\n",
-              "      <td>[1, 115, 3, 140, 141, 135, 142, 91, 143, 144, ...</td>\n",
-              "      <td>0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>15</th>\n",
-              "      <td>15</td>\n",
-              "      <td>31</td>\n",
-              "      <td>32</td>\n",
-              "      <td>[1, 19, 153, 154, 155, 108, 156, 157, 158, 159...</td>\n",
-              "      <td>[26, 164, 153, 154, 165, 3, 160, 166, 8, 147, ...</td>\n",
-              "      <td>1</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>16</th>\n",
-              "      <td>16</td>\n",
-              "      <td>33</td>\n",
-              "      <td>34</td>\n",
-              "      <td>[1, 76, 170, 155]</td>\n",
-              "      <td>[1, 76, 170, 171]</td>\n",
-              "      <td>1</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>17</th>\n",
-              "      <td>17</td>\n",
-              "      <td>35</td>\n",
-              "      <td>36</td>\n",
-              "      <td>[41, 97, 172, 173, 36, 174, 175, 3, 176, 148, ...</td>\n",
-              "      <td>[26, 97, 178, 179, 180, 181, 182]</td>\n",
-              "      <td>0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>18</th>\n",
-              "      <td>18</td>\n",
-              "      <td>37</td>\n",
-              "      <td>38</td>\n",
-              "      <td>[41, 115, 183, 184, 185, 186, 187, 188, 77, 11...</td>\n",
-              "      <td>[41, 97, 192, 193, 185, 188, 56, 27, 36, 190, ...</td>\n",
-              "      <td>1</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>19</th>\n",
-              "      <td>19</td>\n",
-              "      <td>39</td>\n",
-              "      <td>40</td>\n",
-              "      <td>[56, 2, 3, 195, 196, 197, 198, 8, 199]</td>\n",
-              "      <td>[56, 2, 3, 195, 196, 197, 200, 8, 201]</td>\n",
-              "      <td>0</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div>"
-            ],
-            "text/plain": [
-              "    id  qid1  ...                                          question2 is_duplicate\n",
-              "0    0     1  ...                 [1, 2, 3, 4, 5, 4, 6, 7, 8, 9, 10]            0\n",
-              "1    1     3  ...  [1, 19, 20, 21, 3, 22, 23, 24, 3, 13, 14, 15, ...            0\n",
-              "2    2     5  ...            [26, 27, 31, 29, 36, 37, 5, 38, 39, 40]            0\n",
-              "3    3     7  ...  [48, 3, 49, 50, 51, 52, 53, 54, 51, 2, 55, 5, ...            0\n",
-              "4    4     9  ...                        [56, 67, 19, 68, 8, 62, 59]            0\n",
-              "5    5    11  ...  [16, 42, 81, 71, 72, 74, 82, 8, 71, 1, 76, 83,...            1\n",
-              "6    6    13  ...                [1, 87, 88, 89, 90, 91, 92, 93, 94]            0\n",
-              "7    7    15  ...                        [1, 84, 16, 97, 36, 98, 96]            1\n",
-              "8    8    17  ...                             [50, 97, 99, 100, 101]            0\n",
-              "9    9    19  ...          [26, 97, 16, 104, 102, 107, 108, 109, 31]            0\n",
-              "10  10    21  ...  [1, 115, 116, 3, 117, 118, 27, 119, 79, 3, 120...            0\n",
-              "11  11    23  ...               [26, 27, 16, 128, 129, 30, 126, 127]            1\n",
-              "12  12    25  ...                   [26, 27, 99, 130, 131, 132, 133]            1\n",
-              "13  13    27  ...                       [1, 134, 135, 136, 137, 138]            1\n",
-              "14  14    29  ...  [1, 115, 3, 140, 141, 135, 142, 91, 143, 144, ...            0\n",
-              "15  15    31  ...  [26, 164, 153, 154, 165, 3, 160, 166, 8, 147, ...            1\n",
-              "16  16    33  ...                                  [1, 76, 170, 171]            1\n",
-              "17  17    35  ...                  [26, 97, 178, 179, 180, 181, 182]            0\n",
-              "18  18    37  ...  [41, 97, 192, 193, 185, 188, 56, 27, 36, 190, ...            1\n",
-              "19  19    39  ...             [56, 2, 3, 195, 196, 197, 200, 8, 201]            0\n",
-              "\n",
-              "[20 rows x 6 columns]"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 9
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "x-MemWBVsl56",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
