added train/validate graph plot

--- a/DQD_mohit.ipynb
+++ b/DQD_mohit.ipynb
@@ -799,14 +799,36 @@
       },
       "source": [
         "# compile the model\n",
+        "from time import time\n",
         "from tensorflow.keras.optimizers import Adadelta\n",
+        "from keras.callbacks import TensorBoard\n",
+        "LOG_DIR=\"/root/logs\"\n",
+        "tensorboard = TensorBoard(log_dir=LOG_DIR.format(time()))\n",
         "\n",
         "# optimizer = Adadelta(clipnorm = 1.25)\n",
         "model.compile(optimizer = Adadelta(clipnorm = 1.25), loss = 'binary_crossentropy', metrics = ['accuracy'])\n",
         "\n",
         "# train (fit) the model\n",
         "# hist = model.fit([x_train['left'], x_train['right']], y_train, epochs=5, shuffle=True, validation_data=([x_test['left'], x_test['right']], y_test), callbacks=[tensorboard])\n",
-        "# print(hist.history)"
+        "# print(hist.history)\n",
+        "\n",
+        "# # Plot training & validation accuracy values\n",
+        "# plt.plot(history.history['acc'])\n",
+        "# plt.plot(history.history['val_acc'])\n",
+        "# plt.title('Model accuracy')\n",
+        "# plt.ylabel('Accuracy')\n",
+        "# plt.xlabel('Epoch')\n",
+        "# plt.legend(['Train', 'Test'], loc='upper left')\n",
+        "# plt.show()\n",
+        "\n",
+        "# # Plot training & validation loss values\n",
+        "# plt.plot(history.history['loss'])\n",
+        "# plt.plot(history.history['val_loss'])\n",
+        "# plt.title('Model loss')\n",
+        "# plt.ylabel('Loss')\n",
+        "# plt.xlabel('Epoch')\n",
+        "# plt.legend(['Train', 'Test'], loc='upper left')\n",
+        "# plt.show()"
       ],
       "execution_count": 0,
       "outputs": []
