--- a/quora.ipynb
+++ b/quora.ipynb
@@ -262,7 +262,36 @@
         "colab": {}
       },
       "source": [
-        ""
+        "from keras.preprocessing.sequence import pad_sequences\n",
+        "\n",
+        "max_seq_length = max(df.question1.map(lambda x: len(x)).max(),\n",
+        "                     df.question2.map(lambda x: len(x)).max()\n",
+        "                    )\n",
+        "# questions_cols = ['question1', 'question2']\n",
+        "# Split to train validation\n",
+        "\n",
+        "validation_size = 40000\n",
+        "training_size = len(df) - validation_size\n",
+        "\n",
+        "X=df[questions_cols]\n",
+        "Y=df['is_duplicate']\n",
+        "\n",
+        "\n",
+        "x_train,x_test,y_train,y_test = train_test_split(X, Y, test_size = validation_size)\n",
+        "                 \n",
+        "  # Split to dicts\n",
+        "x_train = {'left': x_train.question1, 'right': x_train.question2}\n",
+        "x_test = {'left': x_test.question1, 'right': x_test.question2}\n",
+        "\n",
+        "# Convert labels to their numpy representations\n",
+        "y_train=y_train.values\n",
+        "y_test=y_test.values\n",
+        "\n",
+        "\n",
+        "# zero padding\n",
+        "\n",
+        "for dataset, side in itertools.product([x_train,x_test],['left','right']):\n",
+        "  dataset[side] = pad_sequences(dataset[side], maxlen = max_seq_length)\n"
       ],
       "execution_count": 0,
       "outputs": []
