saved training data and model

--- a/Subin_dQd.ipynb
+++ b/Subin_dQd.ipynb
@@ -31,22 +31,34 @@
       "metadata": {
         "id": "aZlxkvW__7mI",
         "colab_type": "code",
-        "outputId": "a3ca6370-e143-455a-d62d-f2a0d83a2274",
+        "outputId": "664fc973-599d-4947-c545-dc9ae40dbfbf",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 248
         }
       },
       "source": [
-        "!pip install tensorboardcolab\n",
-        "\n"
+        "!pip install pydrive\n",
+        "\n",
+        "!pip install google\n"
       ],
-      "execution_count": 32,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Requirement already satisfied: tensorboardcolab in /usr/local/lib/python3.6/dist-packages (0.0.22)\n"
+            "Requirement already satisfied: pydrive in /usr/local/lib/python3.6/dist-packages (1.3.1)\n",
+            "Requirement already satisfied: oauth2client>=4.0.0 in /usr/local/lib/python3.6/dist-packages (from pydrive) (4.1.3)\n",
+            "Requirement already satisfied: PyYAML>=3.0 in /usr/local/lib/python3.6/dist-packages (from pydrive) (3.13)\n",
+            "Requirement already satisfied: google-api-python-client>=1.2 in /usr/local/lib/python3.6/dist-packages (from pydrive) (1.6.7)\n",
+            "Requirement already satisfied: rsa>=3.1.4 in /usr/local/lib/python3.6/dist-packages (from oauth2client>=4.0.0->pydrive) (4.0)\n",
+            "Requirement already satisfied: httplib2>=0.9.1 in /usr/local/lib/python3.6/dist-packages (from oauth2client>=4.0.0->pydrive) (0.11.3)\n",
+            "Requirement already satisfied: pyasn1-modules>=0.0.5 in /usr/local/lib/python3.6/dist-packages (from oauth2client>=4.0.0->pydrive) (0.2.5)\n",
+            "Requirement already satisfied: pyasn1>=0.1.7 in /usr/local/lib/python3.6/dist-packages (from oauth2client>=4.0.0->pydrive) (0.4.5)\n",
+            "Requirement already satisfied: six>=1.6.1 in /usr/local/lib/python3.6/dist-packages (from oauth2client>=4.0.0->pydrive) (1.12.0)\n",
+            "Requirement already satisfied: uritemplate<4dev,>=3.0.0 in /usr/local/lib/python3.6/dist-packages (from google-api-python-client>=1.2->pydrive) (3.0.0)\n",
+            "Requirement already satisfied: google in /usr/local/lib/python3.6/dist-packages (2.0.2)\n",
+            "Requirement already satisfied: beautifulsoup4 in /usr/local/lib/python3.6/dist-packages (from google) (4.6.3)\n"
           ],
           "name": "stdout"
         }
@@ -57,11 +69,11 @@
       "metadata": {
         "id": "wmC6aoUht9zR",
         "colab_type": "code",
+        "outputId": "dc15673a-ff31-499c-b4fd-d576f1fa818f",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 70
-        },
-        "outputId": "1e6e469c-dfc0-400a-de1a-73030558b889"
+          "height": 160
+        }
       },
       "source": [
         "from time import time\n",
@@ -83,13 +95,17 @@
         "import sys\n",
         "sys.path.append('/content/drive/My Drive/Project')"
       ],
-      "execution_count": 43,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "[nltk_data] Downloading package stopwords to /root/nltk_data...\n",
-            "[nltk_data]   Package stopwords is already up-to-date!\n",
+            "[nltk_data]   Unzipping corpora/stopwords.zip.\n",
+            "Go to this URL in a browser: https://accounts.google.com/o/oauth2/auth?client_id=947318989803-6bn6qk8qdgf4n4g3pfee6491hc0brc4i.apps.googleusercontent.com&redirect_uri=urn%3Aietf%3Awg%3Aoauth%3A2.0%3Aoob&scope=email%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdocs.test%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdrive%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdrive.photos.readonly%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fpeopleapi.readonly&response_type=code\n",
+            "\n",
+            "Enter your authorization code:\n",
+            "··········\n",
             "Mounted at /content/drive\n"
           ],
           "name": "stdout"
@@ -101,7 +117,7 @@
       "metadata": {
         "id": "6e7OQme1A308",
         "colab_type": "code",
-        "outputId": "8cb041a7-bacb-403d-c18d-881db74b5e78",
+        "outputId": "fb420d39-c098-45a5-a708-e02a1df744f4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 228
@@ -110,21 +126,21 @@
       "source": [
         "!ls '/content/drive/My Drive'\n"
       ],
-      "execution_count": 5,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "'Colab Notebooks'\n",
             " Compressed\n",
-            "'dogs and cats pic'\n",
+            " dogs-cats-images.zip\n",
             "'energy environment and society  assignment.pdf'\n",
+            " GoogleNews-vectors-negative300.bin.gz\n",
             " image-93b016bfc7ea033589b8766d020d99cb0108180bdaa53d05dbdaf5883674852e-V.jpg\n",
-            " kagglecatsanddogs_3367a\n",
-            " kagglecatsanddogs_3367a.rar\n",
             " Keygen.exe\n",
             " KIC072BCT039.jpg\n",
             "'New Doc 2019-03-03 12.05.252394441364277969478.pdf'\n",
+            " Project\n",
             " the-new-encyclopedia-of-modern-bodybuilding-arnold.pdf\n",
             " train.csv\n"
           ],
@@ -191,7 +207,7 @@
       "metadata": {
         "id": "bfmvHK6CBb2v",
         "colab_type": "code",
-        "outputId": "81608d28-7194-480c-ae94-dfdd63e32485",
+        "outputId": "e46e84b3-222a-4adc-8753-479f72887444",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 90
@@ -243,7 +259,7 @@
         "            # Replace questions as word to question as number representation\n",
         "            dataset.set_value(index, question, que2no)"
       ],
-      "execution_count": 10,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -261,7 +277,7 @@
       "metadata": {
         "id": "gPG__4vqCFNI",
         "colab_type": "code",
-        "outputId": "1cf77a33-4d84-427c-ad0d-a563803961b9",
+        "outputId": "c0829177-fa29-4180-9dfe-595a7a7f06ad",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 254
@@ -275,7 +291,7 @@
         "# max_seq_length\n",
         "df.tail()"
       ],
-      "execution_count": 11,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -371,7 +387,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 11
+          "execution_count": 6
         }
       ]
     },
@@ -414,7 +430,7 @@
       "metadata": {
         "id": "iyQX5TXOPQYO",
         "colab_type": "code",
-        "outputId": "dba6db0c-c064-4a37-c060-6fa45f816f86",
+        "outputId": "da7478f0-01ca-458c-896c-94cea52d0ca9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 87
@@ -444,7 +460,7 @@
         "y_validate=y_validate.values\n",
         "\n"
       ],
-      "execution_count": 14,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -481,7 +497,7 @@
       "metadata": {
         "id": "RgUMIIWPQ3zc",
         "colab_type": "code",
-        "outputId": "437a83f7-1c52-4a64-91f3-8de43d761a81",
+        "outputId": "5fdfcd0f-e1d9-4351-861b-de5cb3b7ee44",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 52
@@ -495,7 +511,7 @@
         "# print(x_train['left'])\n",
         "print(x_validate['left'].shape)"
       ],
-      "execution_count": 16,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -506,6 +522,163 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "iJoiUa1WybJh",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 266
+        },
+        "outputId": "6f3e251b-7229-491b-8554-47fb0d8e515d"
+      },
+      "source": [
+        "print(x_train)"
+      ],
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "{'left': array([[   0,    0,    0, ..., 3878,  211, 4126],\n",
+            "       [   0,    0,    0, ...,  494,   92,  393],\n",
+            "       [   0,    0,    0, ..., 4348,  816, 7505],\n",
+            "       ...,\n",
+            "       [   0,    0,    0, ...,  139,  401,  898],\n",
+            "       [   0,    0,    0, ...,  383, 4461, 3635],\n",
+            "       [   0,    0,    0, ...,  167, 1145, 1245]], dtype=int32), 'right': array([[   0,    0,    0, ..., 1804,  536, 4126],\n",
+            "       [   0,    0,    0, ...,   30,   92,  393],\n",
+            "       [   0,    0,    0, ..., 9721,  816, 7505],\n",
+            "       ...,\n",
+            "       [   0,    0,    0, ...,  139,  401,  898],\n",
+            "       [   0,    0,    0, ..., 1450,  167, 1639],\n",
+            "       [   0,    0,    0, ...,  248,  161, 1245]], dtype=int32)}\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "haac7j-sxLRm",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "b94622d8-16c9-4a44-dd2a-0cceb7e2d9c6"
+      },
+      "source": [
+        "# saving the training data\n",
+        "import pickle\n",
+        "\n",
+        "pickle_out=open(\"x_train.pickle\",\"wb\")\n",
+        "pickle.dump(x_train,pickle_out)\n",
+        "pickle_out.close\n",
+        "\n",
+        "pickle_out=open(\"x_validate.pickle\",\"wb\")\n",
+        "pickle.dump(x_validate,pickle_out)\n",
+        "pickle_out.close"
+      ],
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<function BufferedWriter.close>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 30
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "k8TOAzOSz95h",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 530
+        },
+        "outputId": "c2639e97-d83f-44a8-c09c-7f5c01f2b205"
+      },
+      "source": [
+        "#uploading the pickle saved trained data in drive\n",
+        "from pydrive.auth import GoogleAuth\n",
+        "from pydrive.drive import GoogleDrive\n",
+        "from google.colab import auth\n",
+        "from oauth2client.client import GoogleCredentials\n",
+        "\n",
+        "# 1. Authenticate and create the PyDrive client.\n",
+        "auth.authenticate_user()\n",
+        "gauth = GoogleAuth()\n",
+        "gauth.credentials = GoogleCredentials.get_application_default()\n",
+        "drive = GoogleDrive(gauth)  \n",
+        "folder_id='1nMGkHjtKSRoGEOVg5-r04Q0lvWGIWVpS'\n",
+        "# get the folder id where you want to save your file\n",
+        "\n",
+        "file = drive.CreateFile({'parents':[{u'id': folder_id}]})\n",
+        "file.SetContentFile('x_train.pickle')\n",
+        "file.Upload() "
+      ],
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "W0617 10:01:08.332728 140040332998528 __init__.py:44] file_cache is unavailable when using oauth2client >= 4.0.0\n",
+            "Traceback (most recent call last):\n",
+            "  File \"/usr/local/lib/python3.6/dist-packages/googleapiclient/discovery_cache/__init__.py\", line 36, in autodetect\n",
+            "    from google.appengine.api import memcache\n",
+            "ModuleNotFoundError: No module named 'google.appengine'\n",
+            "\n",
+            "During handling of the above exception, another exception occurred:\n",
+            "\n",
+            "Traceback (most recent call last):\n",
+            "  File \"/usr/local/lib/python3.6/dist-packages/googleapiclient/discovery_cache/file_cache.py\", line 33, in <module>\n",
+            "    from oauth2client.contrib.locked_file import LockedFile\n",
+            "ModuleNotFoundError: No module named 'oauth2client.contrib.locked_file'\n",
+            "\n",
+            "During handling of the above exception, another exception occurred:\n",
+            "\n",
+            "Traceback (most recent call last):\n",
+            "  File \"/usr/local/lib/python3.6/dist-packages/googleapiclient/discovery_cache/file_cache.py\", line 37, in <module>\n",
+            "    from oauth2client.locked_file import LockedFile\n",
+            "ModuleNotFoundError: No module named 'oauth2client.locked_file'\n",
+            "\n",
+            "During handling of the above exception, another exception occurred:\n",
+            "\n",
+            "Traceback (most recent call last):\n",
+            "  File \"/usr/local/lib/python3.6/dist-packages/googleapiclient/discovery_cache/__init__.py\", line 41, in autodetect\n",
+            "    from . import file_cache\n",
+            "  File \"/usr/local/lib/python3.6/dist-packages/googleapiclient/discovery_cache/file_cache.py\", line 41, in <module>\n",
+            "    'file_cache is unavailable when using oauth2client >= 4.0.0')\n",
+            "ImportError: file_cache is unavailable when using oauth2client >= 4.0.0\n"
+          ],
+          "name": "stderr"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "pdqcx0Zl05t5",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "!ls '/content/drive/My Drive/Project/Pickle'"
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -629,7 +802,7 @@
         "# summary of model\n",
         "print(model.summary())\n"
       ],
-      "execution_count": 26,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -697,7 +870,7 @@
         "                 validation_data=([x_validate['left'], x_validate['right']], y_validate))\n",
         "print(hist.history)\n"
       ],
-      "execution_count": 30,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -763,7 +936,7 @@
         "plt.legend(['Train', 'Test'], loc='upper left')\n",
         "plt.show()"
       ],
-      "execution_count": 34,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -804,18 +977,18 @@
       "metadata": {
         "id": "M_GQ1mRg20hM",
         "colab_type": "code",
+        "outputId": "624a6cd0-c787-4e75-f9e9-73e082d5bbaf",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 228
-        },
-        "outputId": "624a6cd0-c787-4e75-f9e9-73e082d5bbaf"
+        }
       },
       "source": [
         "#saving the model\n",
         "model.save('/content/drive/My Drive/Project/DQD.h5')\n",
         "!ls '/content/drive/My Drive'"
       ],
-      "execution_count": 45,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -842,14 +1015,30 @@
       "metadata": {
         "id": "hoG0uWgVnsmK",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 167
+        },
+        "outputId": "a3f110e1-7251-4d0d-e6b6-997417fe2937"
       },
       "source": [
         "#loading the model\n",
-        "new_model=tf.keras.models.load_model('DQD.model')"
+        "new_model=tf.keras.models.load_model('DQD.h5')"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-1-98cea019024c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mnew_model\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkeras\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodels\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload_model\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'DQD.h5'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 'tf' is not defined"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
